2011-10-13 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/qth-data.c
    * src/save-pass.c
    * src/gtk-polar-view-popup.c
    Eliminate unused variables to clean compiler output.

    * ChangeLog
    * src/sat-log-browser.c
    Add currently shown file name in title.

2011-10-12 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/gtk-sat-list.c
    * src/gtk-sat-list.h
    Filter decayed satellites from satellite list. (Bug 3414666)

    * ChangeLog
    * src/gtk-event-list.c
    * src/gtk-event-list.h
    Filter decayed satellites from event list. (Bug 3414666)


2011-10-10 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/gtk-sat-module-popup.c
    * src/menubar.c
    * src/mod-mgr.c
    Add internationalization to several strings.

2011-10-09 Charles Suprin <hamaa1vs at gmail.com>

    * src/tle-update.c
    Eliminate compiler warning.

    * data/trsp/37772.trsp
    Add transponder file for ARISSAT/Radioskaf-b from Michael Schulz, K5TRI.


2011-10-08 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-map-groundtrack.c
    Use more robust check on orbit change time.
    Reset satellite after computing ground track.


2011-10-07 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-polar-view.c
    * src/gtk-sat-map.c
    Update label as part of satellite update.


2011-10-05 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-rot-ctrl.c
    Eliminate compiler warning.

    * src/gtk-sat-list.c
    * src/gtk-single-sat.c
    * src/gtk-sat-map.h
    * src/predict-tools.h
    Use signed 32 bit integers for orbit counts.

2011-10-03 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-polar-view-popup.c
    Fix segfault when turning on and off skytrack. Bug 3417553: Gpredict crashes.

2011-10-02 Charles Suprin <hamaa1vs at gmail.com>

   * src/sgpsdp/sgp4sdp4.h
   * src/gtk-sat-map-ground-track.c
   Make groundtrack show on orbit zero. (bug 3416451: No ground track for new satellites)
