@@ -1,3 +1,9 @@
+2011-10-23 Charles Suprin <hamaa1vs at gmail.com>
+
+    * src/gtk-sat-map-groundtrack.c
+    Use more robust check on orbit change time.
+
+
 2011-10-13 Charles Suprin <hamaa1vs at gmail.com>
 
     * ChangeLog
